--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,24 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  margin: 0 0;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.banner-background-gradient {
+  background: linear-gradient(90deg, #B1A1FA, #D5CCFC);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-background-gradient{
+  background: linear-gradient(90deg, #4C2C7E, #8A50E4);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.svg-star-with-blur {
+  mask-repeat: no-repeat;
+  mask-size: contain;
+  filter: blur(5px);
+
 }
 
-.card {
-  padding: 2em;
+.svg-star-with-blur path {
+  fill: #fff;
+
 }
 
-.read-the-docs {
-  color: #888;
-}
