--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import "tailwindcss";
+
 #root {
   margin: 0 0;
 }
@@ -52,8 +54,8 @@
 .background-icon-card-3 path {
   fill: #E4BFF6;
 }
-
 .icon-loto path {
   fill: #911787;
 }
+
 
