--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,49 @@
 @import "tailwindcss";
 
+@font-face {
+  font-family: 'roca-one';
+  src: url(./assets/fonts/roca-one-regular.ttf) format('truetype');
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'raleway';
+  src: url(./assets/fonts/Raleway-Regular.ttf) format('truetype');
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'raleway';
+  src: url(./assets/fonts/Raleway-Medium.ttf) format('truetype');
+  font-weight: medium;
+}
+
+@font-face {
+  font-family: 'raleway';
+  src: url(./assets/fonts/Raleway-SemiBold.ttf) format('truetype');
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: 'raleway';
+  src: url(./assets/fonts/Raleway-Bold.ttf) format('truetype');
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: 'inter';
+  src: url(./assets/fonts/Inter_18pt-Regular.ttf);
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'PlusJakartaSans';
+  src: url(./assets/fonts/PlusJakartaSans-SemiBold.ttf);
+  font-weight: 600;
+}
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'raleway', system-ui, Avenir, Helvetica, Arial, sans-serif;
   background-color: #EDEAFE; 
 }
 
